Fixed cutoff pantry

--- a/client/homestyle.css
+++ b/client/homestyle.css
@@ -9,7 +9,7 @@ body {
 
 #left-side-bar {
     background: url('./shelf.jpg') repeat-y;
-    
+    background-size: 100%;
     padding: 5px;
     padding-top: 10px;
 
